--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
-name: Release
-concurrency: release
+name: Release (GitHub)
+concurrency: release-git
 on:
   workflow_dispatch: { }
 
@@ -10,42 +10,15 @@ env:
   CARGO_INCREMENTAL: 0
 
 jobs:
-  test:
-    name: Test
-    uses: ./.github/workflows/test.yml
-    with:
-      is-workflow-call: true
-
-  prepare:
-    name: Set up
-    runs-on: ubuntu-latest
-    outputs:
-      release-type: ${{ steps.changelog.outputs.release-type }}
-      version: ${{ steps.changelog.outputs.version }}
-      issues-closed: ${{ steps.changelog.outputs.issues-closed }}
-      changelog: ${{ steps.changelog.outputs.changelog }}
-      should-release: ${{ steps.changelog.outputs.should-release }}
-    steps:
-      - uses: actions/checkout@v4
-        name: Checkout
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-
-      - name: Generate changelog
-        id: changelog
-        uses: ./.github/actions/changelog
-
   git:
     name: Git release
     runs-on: ubuntu-latest
-    needs:
-      - test
-      - prepare
-    if: ${{ needs.prepare.outputs.should-release }}
     environment: github
     permissions:
       contents: write
+    outputs:
+      issues-closed: ${{ steps.changelog.outputs.issues-closed }}
+      version: ${{ steps.changelog.outputs.version }}
     steps:
       - uses: actions/checkout@v4
         name: Checkout
@@ -57,6 +30,10 @@ jobs:
       - name: Git identity
         uses: alorel-actions/git-ident@v1
 
+      - name: Generate changelog
+        id: changelog
+        uses: ./.github/actions/changelog
+
       - name: Init toolchain
         uses: alorel-actions/cargo/init@v1
         with:
@@ -65,52 +42,29 @@ jobs:
       - name: cargo-bump
         uses: alorel-actions/cargo/bump@v1
         with:
-          release-type: ${{ needs.prepare.outputs.release-type }}
+          release-type: ${{ steps.changelog.outputs.release-type }}
 
       - name: Git release
         uses: alorel-actions/cargo/release-git@v1
         with:
-          version: ${{ needs.prepare.outputs.version }}
-          changelog: ${{ needs.prepare.outputs.changelog }}
-
-  release:
-    name: Crate release
-    needs:
-      - git
-    if: ${{ needs.prepare.outputs.should-release }}
-    runs-on: ubuntu-latest
-    environment: crates-io
-    steps:
-      - uses: actions/checkout@v4
-        name: Checkout
-        with:
-          fetch-tags: true
-          ref: ${{ needs.prepare.outputs.version }}
-
-      - name: Init toolchain
-        uses: alorel-actions/cargo/init@v1
-        with:
-          cache-prefix: release
-
-      - name: Publish crate
-        run: cargo publish --locked --token ${{ secrets.CRATES_IO_TOKEN }}
+          version: ${{ steps.changelog.outputs.version }}
+          changelog: ${{ steps.changelog.outputs.changelog }}
 
   notify:
     name: Notify closed issues
     needs:
-      - release
-      - prepare
-    if: ${{ needs.prepare.outputs.should-release && needs.prepare.outputs.issues-closed }}
+      - git
+    if: ${{ needs.git.outputs.issues-closed }}
     runs-on: ubuntu-latest
     environment: github
     permissions:
       contents: write
     steps:
       - name: Notify
-        if: ${{ needs.prepare.outputs.issues-closed }}
+        if: ${{ needs.git.outputs.issues-closed }}
         uses: alorel-actions/semantic-release-lite/notify@v0
         with:
-          tag: ${{ needs.prepare.outputs.version }}
-          issues: ${{ needs.prepare.outputs.issues-closed }}
+          tag: ${{ needs.git.outputs.version }}
+          issues: ${{ needs.git.outputs.issues-closed }}
           allow-out-of-sync: true
           gh-token: ${{ secrets.GH_TOKEN }}
